# model-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: pre-commit
app/: __main__.py  auth.py  cli.py  cli_main.py  main.py
app/cli/: __init__.py  api_keys.py  config_exporter.py  config_manager.py  discovery.py  interactive.py  models.py  providers.py  wizard_utils.py
app/core/: __init__.py  api_key_manager.py  config_paths.py  error_formatters.py  format_converters.py  logging.py  model_resolver.py  provider_config.py  startup_validation.py
app/database/: crud.py  database.py  logging_crud.py  logging_models.py  models.py
app/middleware/: logging_middleware.py  rate_limiting.py
app/models/: anthropic.py  openai.py
app/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  gemini_openai_provider.py  gemini_provider.py  openai_provider.py  registry.py
app/routers/: anthropic.py  health.py  openai.py
app/routing/: config_loader.py  executor.py  models.py  router.py
app/setup_ui/: __init__.py  routes.py
config/: MODELS.md  models.json
docs/: fallback-routing.md
scripts/: fallback_tester.py  model-proxy
tests/: cli_test.py  conftest.py  test_anthropic_router.py  test_api_key_manager.py  test_api_key_manager_edge_cases.py  test_auth.py  test_auth_edge_cases.py  test_cli_add.py  test_cors.py  test_error_formatters.py  test_fallback_routing.py  test_format_converters.py  test_format_converters_edge_cases.py  test_health.py  test_logging_core.py  test_logging_crud.py  test_logging_integration.py  test_logging_middleware.py  test_model_resolver.py  test_model_routing.py  test_no_route_ids.py  test_openai_router.py  test_provider_config.py  test_providers.py  test_providers_edge_cases.py  test_rate_limiting.py  test_routers_comprehensive.py  test_routers_integration.py  test_scoped_rate_limits.py  test_startup_validation.py  test_tool_calling.py
(+26 files in other folders)
