[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-proxy"
version = "0.1.0"
description = "A production-ready FastAPI application that provides a unified, multi-provider LLM inference proxy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "httpx",
    "python-dotenv",
    "azure-ai-inference",
    "google-genai",
    "aiohttp",
    "typer>=0.9.0",
    "questionary>=2.0.0"
]

[project.scripts]
model-proxy = "app.cli_main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "rich>=13.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.setuptools.data-files]
"config" = ["config/*.json"]
"config/providers" = ["config/providers/*.json"]
"config/models" = ["config/models/*.json"]
"config/templates" = ["config/templates/*.json"]

# Include config directory in the package
[tool.setuptools]
include-package-data = true

[tool.ruff.lint]
per-file-ignores = {"app/main.py" = ["E402"]}
